--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,12 +10,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.12.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/date-fns": "^2.6.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
